# ppxf_gpu

./: .gitignore  README.md  benchmark_sdss.py  check_jax.py  environment.yml  ppxf.py  ppxf_batch.py  ppxf_util.py  pyproject.toml  torch_wrapper.py
.github/workflows/: benchmarks.yml
benchmarks/: README.md  REPORT.md  benchmark_batch_prototype.py  benchmark_gas_sdss_tied.py  benchmark_integral_field.py  benchmark_ppxf_batch.py  benchmark_sdss.py  benchmark_throughput.py  run_all.py  verify_gpu_fallback.py  verify_results.py
